--- a/stylesheet.css
+++ b/stylesheet.css
@@ -168,6 +168,6 @@ span.psw {
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
+.dropdown:hover .droptd {
     background-color: #3e8e41;
 }
